# mer

./: .gitignore  LICENSE  README.md  __main__.py  interface.py  process.py  process_manager.py  processes.yml  pyproject.toml
mer/: __main__.py  color.py  interface.py  process.py  process_manager.py
